# fix-message-parser-execution-break-simulator

./: .gitignore  Makefile  PROJECT_SCOPE.md  README.md  RUNBOOK.md  pyproject.toml
.github/workflows/: ci.yml
data/input/: broker_drop_copy.csv  expected_order_states.csv  internal_orders.csv
data/raw/: fix_messages.txt
docs/: DATA_DICTIONARY.md  SAMPLE_INVESTIGATION.md
reports/exceptions/: cumqty_leavesqty_inconsistency.csv  duplicate_exec_id.csv  missing_broker_drop_copy.csv  missing_execution_report.csv  order_status_mismatch.csv  price_mismatch.csv  quantity_mismatch.csv  rejected_order.csv  side_mismatch.csv  stale_open_order.csv  symbol_mismatch.csv  unexpected_fill.csv
sql/: reconciliation_queries.sql  schema.sql
src/fixops/: __init__.py  config.py  fix_parser.py  generate_sample_data.py  load_db.py  reconcile.py
tests/: test_parser.py  test_reconciliation.py
