[project]
name = "fix-message-parser-execution-break-simulator"
version = "0.1.0"
description = "Simulated FIX execution report parser and trade support reconciliation project"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
